--- a/roles.html
+++ b/roles.html
@@ -33,13 +33,13 @@
                 <ul class="navbar-nav mx-auto">
                     
                     <li class="nav-item">
-                        <a href="#Roles" class="nav-link">Roles</span></a>
+                        <a href="roles.html" class="nav-link">Roles</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#Members" class="nav-link"><span data-hover="Members">Team members</span></a>
+                        <a href="team.html" class="nav-link"><span data-hover="Members">Team members</span></a>
                     </li>
                     <li class="nav-item">
-                        <a href="#technologies" class="nav-link">Technologies used</a>
+                        <a href="tech.html" class="nav-link">Technologies used</a>
                     </li>
                 </ul>
 
