--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                <div class="row">
 
                     <div class="col-lg-12 col-12">                                
-                        <p class="copyright-text text-center">Copyright &copy; 2019 Bhargav . All rights reserved</p>
+                        <p class="copyright-text text-center">Designed by Bhargav</p>
                     </div>
                     
                </div>
